--- a/chekov.css
+++ b/chekov.css
@@ -27,3 +27,20 @@
 .bortsov {
   color: brown;
 }
+
+table {
+  color: black;
+  text-align: left;
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  padding: 0.5rem;
+}
